--- a/to-do-list/package.json
+++ b/to-do-list/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.514.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hotkey-hook": "^1.0.3",
+    "react-hotkeys-hook": "^5.1.0",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
